--- a/html/Contact.html
+++ b/html/Contact.html
@@ -81,7 +81,7 @@
 				<li><a href="CV.html">CV</a></li>
 				<li><a href="blogs.html">Blogs</a></li>
 				<li><a href="research.html">research</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li><a href="Contact.html">Contact</a></li>
 
 			</ul>
 		</div><br>
