--- a/html/Contact.html
+++ b/html/Contact.html
@@ -80,7 +80,7 @@
 				<li><a href=../index.html>Home</a></li>
 				<li><a href="CV.html">CV</a></li>
 				<li><a href="blogs.html">Blogs</a></li>
-				<li><a href="research.html">research</a></li>
+				<li><a href="Research.html">Research</a></li>
 				<li><a href="Contact.html">Contact</a></li>
 
 			</ul>
