--- a/html/Research.html
+++ b/html/Research.html
@@ -32,8 +32,8 @@
 				<li><a href=../index.html>Home</a></li>
 				<li><a href="CV.html">CV</a></li>
 				<li><a href="blogs.html">Blogs</a></li>
-				<li><a href="Research.html">research</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li><a href="Research.html">Research</a></li>
+				<li><a href="Contact.html">Contact</a></li>
 
 			</ul>
 		</div><br><br><br><br><br><br>
