--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 				<li><a href=index.html>Home</a></li>
 				<li><a href="html/CV.html">CV</a></li>
 				<li><a href="html/blogs.html">Blogs</a></li>
-				<li><a href="html/Research.html">research</a></li>
-				<li><a href="html/contact.html">Contact</a></li>
+				<li><a href="html/Research.html">Research</a></li>
+				<li><a href="html/Contact.html">Contact</a></li>
 
 			</ul>
 		</div>
